FEAT [build-config]: update libs versions

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,31 @@
 [versions]
 agp = "8.2.0-alpha10"
-core-ktx = "1.9.0"
+core-ktx = "1.12.0"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.2"
-ktx = "1.10.1"
-compose-bom = "2023.06.01"
-compose-compiler = "1.4.7"
-compose-activty = "1.7.2"
-lifecycle = "2.6.1"
-workmanager = "2.8.1"
-coroutines = "1.7.1"
+lifecycle-runtime-ktx = "2.7.0"
+activity-compose = "1.8.2"
+ktx = "1.12.0"
+compose-bom = "2024.02.00"
+compose-compiler = "1.5.9"
+compose-activty = "1.8.2"
+lifecycle = "2.7.0"
+workmanager = "2.9.0"
+coroutines = "1.7.3"
 appcompat = "1.6.1"
-koin = "3.4.2"
-koin-compose = "3.4.5"
-koin-ksp = "1.2.2"
-androidGradlePlugin = "8.0.2"
-kotlin = "1.8.21"
-ksp = "1.8.21-1.0.11"
-room = "2.5.2"
-voyager = "1.0.0-rc05"
+koin = "3.5.3"
+koin-compose = "3.5.3"
+koin-ksp = "1.3.0"
+androidGradlePlugin = "8.2.2"
+kotlin = "1.9.22"
+ksp = "1.9.22-1.0.17"
+room = "2.6.1"
+voyager = "1.0.0"
 junit = "4.13.2"
 junit-ext = "1.1.5"
 espresso = "3.5.1"
 timber = "5.0.1"
-material = "1.9.0"
+material = "1.11.0"
 
 
 [libraries]
@@ -67,7 +67,7 @@ androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", versi
 androidx-compose-ui = { module = "androidx.compose.ui:ui" }
 androidx-compose-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.1.0-rc01" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.2.0" }
 androidx-compose-uitooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-uitestmanifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "compose-activty" }
